# subfield

./: .gitignore  README.md  astro.config.mjs  bun.lockb  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
.github/workflows/: deploy.yml  static.yml
.sh/: build-subfield.sh
src/layouts/: Layout.astro
src/pages/: index.mdx
subfield/: Cargo.toml  README.md  index-node.ts  index-web.ts  index.ts  package.json  tsconfig.json
subfield/.sh/: build-subfield.sh  setup.sh
subfield/src/: lib.rs
subfield/src/crypto/: cipher.rs  noise.rs
subfield/src/crypto/keys/: common.rs  keypair.rs  private_key.rs  public_key.rs
subfield/src/misc/: mod.rs  traits.rs  versioned_bytes.rs
subfield/src/tests/: crypto.rs  mod.rs
subfield/tests/: crypto.test.ts  node.ts  noise.test.ts
