[package]
name = "subfield"
version = "0.1.0"
authors = ["kahnpoint <96557890+kahnpoint@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#
## Crypto
##
### Hashes
blake3 = { version = "1.5.1" } 
chacha20poly1305 = { version = "0.10.1" } 
# curve25519-dalek = { version = "4.1.2" } # Key generation and conversion
ed25519-dalek = { version = "2.1.1", features = [
	"serde",
	"rand_core",
] } 
x25519-dalek = { version = "2.0.1", features = [
	"serde",
	"static_secrets",
] }
snow = "0.9.6"
#
## Serialization
##
bincode = "1.3.3"
serde = { version = "1.0.209", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
bytes = "1.7.1"
base32 = "0.5.1"
#
## Wasm 
##
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3.70"
#
## Logging
##
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
#
## Math
##
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
#
## Misc
##
either = "1.13.0"
futures = "0.3.30"
getset = "0.1.2"
itertools = "0.13.0"
once_cell = "1.19.0"
lazy_static = "1.5.0"
